// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IssueStatusIcon renders "failed" state correctly 1`] = `
<div
  class="report-block-list-icon failed"
>
  <gl-icon-stub
    data-qa-selector="status_failed_icon"
    name="status_failed_borderless"
    size="24"
  />
</div>
`;

exports[`IssueStatusIcon renders "neutral" state correctly 1`] = `
<div
  class="report-block-list-icon neutral"
>
  <gl-icon-stub
    data-qa-selector="status_neutral_icon"
    name="dash"
    size="24"
  />
</div>
`;

exports[`IssueStatusIcon renders "success" state correctly 1`] = `
<div
  class="report-block-list-icon success"
>
  <gl-icon-stub
    data-qa-selector="status_success_icon"
    name="status_success_borderless"
    size="24"
  />
</div>
`;
